Updating with feedback from Systems Fixer, including splitting Rollup__mdt.GroupByDelimiter__c into -> Rollup__mdt.GroupByRowStartDelimiter__c and Rollup__mdt.GroupByRowEndDelimiter__c, as well as adding correct new line handling for rich/long text area fields

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -2420,7 +2420,7 @@ private class RollupFullRecalcTests {
         RollupFieldOnLookupObject__c = 'Description',
         RollupOperation__c = 'SUM',
         GroupByFields__c = 'StageName',
-        GroupByRowDelimiter__c = '<p>'
+        GroupByRowStartDelimiter__c = '<p>'
       )
     );
     Test.stopTest();
