--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -1918,13 +1918,19 @@ private class RollupCalculatorTests {
 
   @IsTest
   static void performsGroupByWhenSupplied() {
-    String rowDelimiter = '\n\t';
+    String rowEndDelimiter = '\n\t';
+    String rowStartDelimiter = '* ';
     RollupCalculator calc = getCalculator(
       null,
       Rollup.Op.SUM,
       Opportunity.Amount,
-      Account.AnnualRevenue,
-      new Rollup__mdt(CalcItem__c = String.valueOf(Opportunity.SObjectType), GroupByFields__c = 'StageName, Name', GroupByRowDelimiter__c = rowDelimiter),
+      Account.Description,
+      new Rollup__mdt(
+        CalcItem__c = String.valueOf(Opportunity.SObjectType),
+        GroupByFields__c = 'StageName, Name',
+        GroupByRowEndDelimiter__c = rowEndDelimiter,
+        GroupByRowStartDelimiter__c = rowStartDelimiter
+      ),
       RollupTestUtils.createId(Account.SObjectType),
       Account.Id
     );
@@ -1943,22 +1949,85 @@ private class RollupCalculatorTests {
     );
 
     String expectedGroupByString =
-      rowDelimiter +
+      rowStartDelimiter +
       '(blank), (blank), 50.0' +
-      rowDelimiter +
+      rowEndDelimiter +
+      rowStartDelimiter +
       'One, (blank), 100.0' +
-      rowDelimiter +
+      rowEndDelimiter +
+      rowStartDelimiter +
       'Two, Deux, 100.0' +
-      rowDelimiter +
+      rowEndDelimiter +
+      rowStartDelimiter +
       'Z, (blank), 50.0' +
-      rowDelimiter +
+      rowEndDelimiter +
+      rowStartDelimiter +
       'Z, A, 50.0';
     System.assertEquals(expectedGroupByString, calc.getReturnValue());
   }
 
+  @IsTest
+  static void respectsCustomConcatDelimiterForGroupBy() {
+    RollupCalculator calc = getCalculator(
+      null,
+      Rollup.Op.SUM,
+      Opportunity.Amount,
+      Account.Description,
+      new Rollup__mdt(CalcItem__c = String.valueOf(Opportunity.SObjectType), GroupByFields__c = 'StageName, Name', ConcatDelimiter__c = '; '),
+      RollupTestUtils.createId(Account.SObjectType),
+      Account.Id
+    );
+
+    calc.performRollup(
+      new List<SObject>{
+        new Opportunity(StageName = 'Two', Name = 'Deux', Amount = 50),
+        new Opportunity(StageName = 'Two', Name = 'Deux', Amount = 50),
+        new Opportunity(StageName = 'One', Amount = 50),
+        new Opportunity(StageName = 'One', Amount = 50)
+      },
+      new Map<Id, SObject>()
+    );
+
+    System.assertEquals('• One; (blank); 100.0\n• Two; Deux; 100.0', calc.getReturnValue());
+  }
+
+  @IsTest
+  static void doesNotConvertCurrencyWhenGroupingByCurrencyIsoCode() {
+    if (RollupCurrencyInfo.IS_MULTICURRENCY == false) {
+      return;
+    }
+    Account fakeAccount = new Account(Id = RollupTestUtils.createId(Account.SObjectType));
+    fakeAccount.put(RollupCurrencyInfo.CURRENCY_ISO_CODE_FIELD_NAME, 'USD');
+
+    RollupCalculator calc = getCalculator(
+      null,
+      Rollup.Op.SUM,
+      Opportunity.Amount,
+      Account.Description,
+      new Rollup__mdt(CalcItem__c = String.valueOf(Opportunity.SObjectType), GroupByFields__c = 'StageName, CurrencyIsoCode'),
+      fakeAccount.Id,
+      Account.Id
+    );
+    calc.setMultiCurrencyInfo(fakeAccount);
+
+    List<SObject> opportunities = new List<SObject>{
+      new Opportunity(StageName = 'One', Amount = 50),
+      new Opportunity(StageName = 'One', Amount = 50),
+      new Opportunity(StageName = 'One', Amount = 50),
+      new Opportunity(StageName = 'One', Amount = 50)
+    };
+    for (Integer index = 0; index < opportunities.size(); index++) {
+      opportunities[index].put(RollupCurrencyInfo.CURRENCY_ISO_CODE_FIELD_NAME, Math.mod(index, 2) == 0 ? 'EUR' : 'JPY');
+    }
+
+    calc.performRollup(opportunities, new Map<Id, SObject>());
+
+    System.assertEquals('• One, EUR, 100.0\n• One, JPY, 100.0', calc.getReturnValue());
+  }
+
   private class RollupCalcEmptyMock extends RollupCalculator {
     public RollupCalcEmptyMock() {
-      super(Rollup.Op.LAST, null, null, null, new Rollup__mdt(), null);
+      super(Rollup.Op.LAST, null, null, new Rollup__mdt(), null);
     }
   }
 
